# agentic-phidata-basic

./: README.md  finance_agent.py  multi_agent.py  playground.py  pyproject.toml  web_search_agent.py
src/agents/: finance_agent.py  multi_agent.py  playground.py
src/pdfAssistant/: pdf_assistant.py
