[project]
name = "agentic-phidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=7.2.0",
    "fastapi[standard]>=0.115.6",
    "groq>=0.13.1",
    "openai>=1.59.4",
    "packaging>=24.2",
    "pgvector>=0.3.6",
    "phidata>=2.7.6",
    "psycopg>=3.2.3",
    "psycopg-binary>=3.2.3",
    "pypdf>=5.1.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.51",
]
